--- a/fr.faylixe.jammy.ui/plugin.xml
+++ b/fr.faylixe.jammy.ui/plugin.xml
@@ -41,7 +41,7 @@
       <view
             category="fr.faylixe.jammy.view.category"
             class="fr.faylixe.jammy.ui.view.SubmissionView"
-            icon="src/icons/submission.view.png"
+            icon="platform:/plugin/fr.faylixe.jammy.ui/icons/submission.view.png"
             id="fr.faylixe.jammy.view.submission"
             name="Submission"
             restorable="true">
@@ -49,7 +49,7 @@
       <view
             category="fr.faylixe.jammy.view.category"
             class="fr.faylixe.jammy.ui.view.ProblemView"
-            icon="src/icons/problem.view.png"
+            icon="platform:/bundle/fr.faylixe.jammy.ui/icons/problem.view.png"
             id="fr.faylixe.jammy.view.problem"
             name="Problem description"
             restorable="true">
@@ -60,7 +60,7 @@
       <view
             category="fr.faylixe.jammy.view.category"
             class="fr.faylixe.jammy.ui.view.ContestExplorer"
-            icon="src/icons/contest.view.png"
+            icon="platform:/bundle/fr.faylixe.jammy.ui/icons/contest.view.png"
             id="fr.faylixe.jammy.view.contest"
             name="Contest Explorer"
             restorable="true">
@@ -81,7 +81,7 @@
           point="org.eclipse.ui.perspectives">
        <perspective
              class="fr.faylixe.jammy.ui.JammyPerspectiveFactory"
-             icon="src/icons/jammy.png"
+             icon="platform:/bundle/fr.faylixe.jammy.ui/icons/jammy.png"
              id="fr.faylixe.jammy.perspective"
              name="Jammy">
        </perspective>
