Removes OSGi gcj client version, adding packaged jar to the core bundle.

--- a/fr.faylixe.jammy.core/build.properties
+++ b/fr.faylixe.jammy.core/build.properties
@@ -1,4 +1,5 @@
 source.. = src/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               libs/googlecodejam-client-1.2.6.jar
