--- a/fr.faylixe.jammy.addons.java/pom.xml
+++ b/fr.faylixe.jammy.addons.java/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>fr.faylixe</groupId>
     <artifactId>jammy</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <groupId>fr.faylixe</groupId>
   <artifactId>fr.faylixe.jammy.addons.java</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>eclipse-plugin</packaging>
 </project>
