Updates POM version

--- a/fr.faylixe.jammy.core/pom.xml
+++ b/fr.faylixe.jammy.core/pom.xml
@@ -10,6 +10,6 @@
 	</parent>
 	<groupId>fr.faylixe</groupId>
 	<artifactId>fr.faylixe.jammy.core</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 </project>
