--- a/fr.faylixe.jammy.addons.java/pom.xml
+++ b/fr.faylixe.jammy.addons.java/pom.xml
@@ -9,6 +9,6 @@
   </parent>
   <groupId>fr.faylixe</groupId>
   <artifactId>fr.faylixe.jammy.addons.java</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
