--- a/fr.faylixe.jammy.core/build.properties
+++ b/fr.faylixe.jammy.core/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               libs/googlecodejam-client-1.2.6.jar
+               google.jks,\
+               libs/googlecodejam-client-1.2.8.jar
